Some design overflow issues fixed

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -31,6 +31,7 @@ h4, h5, h6 {
 .container {
   display: flex;
   flex-direction: column;
+
   h1 {
     color: $darkOrange;
     margin: 5vw 0 0 20vw;
@@ -73,6 +74,7 @@ h4, h5, h6 {
     cursor: pointer;
     transition: all 0.2s ease-in-out;
   }
+
   button:hover {
     transform: scale(1.1);
   }
@@ -100,14 +102,20 @@ hr {
   align-items: center;
   color: white;
   font-size: 1.5rem;
+  overflow: auto;
+
   h4 {
     margin: 0;
   }
+
   h5 {
     font-family: $heading-font;
     color: $darkOrange;
     font-size: 2rem;
+    line-height: 1;
     text-align: end;
+    hyphens: auto;
+    max-width: 50%;
   }
 }
 
@@ -117,11 +125,15 @@ hr {
     h1 {
       font-size: 3.25rem;
     }
+
     textarea {
       width: 55vw;
       height: 29vw;
       margin: 22.5vw 0;
+      padding: 2.25vw;
+      border-radius: 10px 83px;
     }
+
     button {
       margin: 42.5vw 0 5vw 65vw;
       width: 12.5vw;
@@ -133,11 +145,13 @@ hr {
   }
 
   .stats-line {
-    font-size: 1.25rem; 
-    height: 6.25vw;
+    font-size: 1.4rem; 
+    height: 15vw;
+    flex-direction: column;
     
     h5 {
-      font-size: 1.75rem;
+      font-size: 1.65rem;
+      max-width: 75%;
     }
   }
 }
@@ -158,6 +172,7 @@ hr {
 
     textarea {
       margin: 35vw 0;
+      padding: 3vw;
       width: 70vw;
       height: 45vw;
       border-radius: 5px 41.5px;
@@ -165,7 +180,7 @@ hr {
 
     button {
       width: 25vw;
-      margin: 65vw 0 7vw 65vw;
+      margin: 70vw 0 7vw 65vw;
       font-size: 1.2rem;
     }
   }
@@ -175,11 +190,13 @@ hr {
   }
 
   .stats-line {
-    height: 7.5vw;
-    font-size: 1rem; 
+    flex-direction: column;
+    height: 25vw;
+    font-size: 1.15rem;
 
     h5 {
-      font-size: 1.5rem;
+      font-size: 1.4rem;
+      max-width: 75%;
     }
   }
 }
